<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_recipe_edit_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_edit_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_recipe_edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_recipe_edit_ingredients"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_edit_ingredients">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_recipe_edit_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_recipe_edit_cooking_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_edit_cooking_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_recipe_edit_cooking_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_recipe_edit_directions"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_edit_directions">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_recipe_edit_directions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_recipe_edit_picture_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_recipe_edit_picture_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_edit_picture_add" />

            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/layout_recipe_edit_picture_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_recipe_edit_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/image_recipe_edit_picture"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/recipe_edit_picture_description" />

                <Button
                    android:id="@+id/btn_recipe_edit_picture_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_edit_picture_delete" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_recipe_edit_recipe_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:layout_behavior="com.mrbinwin.hungryapp.behaviors.ScrollAwareFABBehavior"
        app:srcCompat="@drawable/ic_check_black_24dp" />

</FrameLayout>