<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/fragment_recipes"
        android:theme="@style/ThemeOverlay.App.RecipeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_recipe_picture"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/recipe_picture"
            android:visibility="gone" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_margin_bottom"
            android:layout_marginTop="@dimen/card_view_margin_top"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/text_recipe_ingredients_label"
                    style="?textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients" />

                <TextView
                    android:id="@+id/text_recipe_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_add_to_shopping_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_margin="8dp"
                android:contentDescription="Add to shopping list"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_add_shopping_cart_24dp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_recipe_cooking_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/card_view_margin_bottom"
            android:layout_marginTop="@dimen/card_view_margin_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/text_recipe_cooking_time_label"
                    style="?textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_cooking_time" />

                <TextView
                    android:id="@+id/text_recipe_cooking_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_recipe_directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/card_view_margin_bottom"
            android:layout_marginTop="@dimen/card_view_margin_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/text_recipe_directions_label"
                    style="?textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_directions" />

                <TextView
                    android:id="@+id/text_recipe_directions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>